--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ h4.ff{font-size: 20px; font-weight: 600; margin-bottom: 30px}
 .image-box{text-align: center;padding: 40px 20px;background: #fff;border-radius: 16px; transition: 0.6s;}
 .image-box img{width: 25%;}
 .image-box h3{font-weight: 700; font-size: 25px;}
-.image-boxx{text-align: center;padding: 20px 20px;background: #fff;border-radius: 16px;  transition: 0.6s;}
+.image-boxx{text-align: center;padding: 20px 20px;background: #fff;border-radius: 16px; border: 2px solid #166836;  transition: 0.6s;}
 .image-boxx img{width: 25%;}
 .image-boxx h3{font-weight: 700; font-size: 25px;}
 .about-us{padding: 100px 0}
@@ -50,3 +50,7 @@ h4.ff{font-size: 20px; font-weight: 600; margin-bottom: 30px}
 .benefits-section {padding: 100px 0;background: #006834;}
 .image-box:hover {box-shadow: 5px 5px 14px 0px rgb(255 255 255);transition: 0.6s;border-radius: 20px;}
 .image-boxx:hover {box-shadow: 5px 5px 14px 0px rgb(0 104 52);transition: 0.6s;border-radius: 20px;}
+.services-section{padding: 100px 0;}
+.row.services_row_two{margin-top: 50px;}
+.services-section p{text-align: justify;}
+.services-section{text-align: justify;}
