all sections done

--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,8 @@
 .theme-btn:hover:after {transform: scale(1, 1);transform-origin: bottom left;}
 .theme-btn:after {position: absolute; left: 0; top: 0; z-index: -1; height: 100%; width: 100%; content: ""; background-color: #006834;border-radius: 30px;transform: scale(0, 1);transform-origin: top right;transition: transform 500ms;}
 .theme-btn:hover {color: #fff;text-decoration: none;}
-h2.ff{font-size: 45px; font-weight: 700; margin-bottom: 30px;}
-h4.ff{font-size: 20px; font-weight: 600; margin-bottom: 30px}
+h2.ff{font-size: 45px; font-weight: 700; margin-bottom: 20px;}
+h4.ff{font-size: 20px; font-weight: 600; margin-bottom: 20px}
 .image-box{text-align: center;padding: 40px 20px;background: #fff;border-radius: 16px; transition: 0.6s;}
 .image-box img{width: 25%;}
 .image-box h3{font-weight: 700; font-size: 25px;}
@@ -38,15 +38,18 @@ h4.ff{font-size: 20px; font-weight: 600; margin-bottom: 30px}
 .counter {display: block;font-size: 32px;font-weight: 700;color: #666;line-height: 28px;}
 .counter-box.colored {background: #3acf87;}
 .counter-box.colored p,.counter-box.colored i,.counter-box.colored .counter {color: #fff;}
+.faqs{padding: 100px 0}
+.faqs p.text-center{margin-bottom: 30px}
+.faqs h2.ff{margin-bottom: 10px}
 .faqs .accordion-button:not(.collapsed){background-color: #217248;color: #fff;font-weight: 600;}
 .faqs .accordion-button:focus{border-color: #217248;box-shadow: 0 0 0 0.08rem rgb(33 114 72);}
 .faqs .accordion-button:not(.collapsed)::after{	background-image: url(../images/arrow.png);transform: rotate(-180deg);}
-.why-choose-us{padding: ; background: #166836;}
+.why-choose-us{ background: #166836;}
 .banner_ul_treatment .banner_li {list-style: none;font-size: 17px;line-height: 40px;background: url(../images/white-tick.png) no-repeat left 11px;padding: 0 0 0px 30px;color: #fff}
 .banner_ul_treatment{padding: 0;}
-.why-choose-us .col-6-image-sec{background: url(../images/Sharp-Sight-Better-Vision-Deserves-The-Latest-Technology.webp); background-position: cover; background-repeat: no-repeat; background-size: cover;}
+.why-choose-us .col-6-image-sec{background: url(../images/Sharp-Sight-Better-Vision-Deserves-The-Latest-Technology.webp); background-position: center; background-repeat: no-repeat; background-size: cover;}
 .container-fluid.cff{padding: 0 0 0 15%; overflow-x: hidden;}
-.why-choose-us .col-6-pointers{padding: 100px 0}
+.why-choose-us .col-6-pointers{padding: 100px 20px}
 .benefits-section {padding: 100px 0;background: #006834;}
 .image-box:hover {box-shadow: 5px 5px 14px 0px rgb(255 255 255);transition: 0.6s;border-radius: 20px;}
 .image-boxx:hover {box-shadow: 5px 5px 14px 0px rgb(0 104 52);transition: 0.6s;border-radius: 20px;}
@@ -55,3 +58,18 @@ h4.ff{font-size: 20px; font-weight: 600; margin-bottom: 30px}
 .services-section p{text-align: justify;}
 .services-section{text-align: justify;}
 .book_now_section{background: url(../images/book-now.png); background-position: center;background-repeat: no-repeat; background-size: cover; padding: 100px 0;}
+.bookform {padding: 50px 30px;background: #fff; border-radius: 16px}
+.form-group {margin: 20px 0;}
+.bookform h3{color: #166836;font-size: 1.375rem;text-align: center;}
+.bookform .btn-primary{background: #166836; border-color: #166836}
+.bookform .btn-primary:hover{background: #fff; color: #166836; border-color: #166836}
+.bookform .btn-primary:focus {color: #fff;background-color: #166836;border-color: #166836;box-shadow: 0 0 0 0.25rem rgb(36 111 68);}
+.bookform .btn-primary:active:focus{box-shadow: 0 0 0 0.25rem rgb(36 111 68);}
+.bookform .form-control:focus{box-shadow: 0 0 0 0.15rem rgb(36 111 68);border-color:#fff}
+.book-number{font-weight: 700;margin-bottom: 30px}
+.book-image{width: 90%; border-radius: 16PX}
+.book_now_section h4.ff{margin-bottom: 20px}
+.testimonial_section{padding: 100px 0}
+.testimonial-slider {padding: 50px 0;background: #156836;color: #fff;}
+.ourapproach{padding: 100px 0;background: #156736}
+.ourapproach .image-box h3{margin: 15px 0}
