--- a/css/style.css
+++ b/css/style.css
@@ -74,3 +74,10 @@ h4.ff{font-size: 20px; font-weight: 600; margin-bottom: 20px}
 .ourapproach{padding: 100px 0;background: #156736}
 .ourapproach .image-box h3{margin: 15px 0}
 .test_image{width: 70%}
+.video_section{padding: 30px 0 100px}
+button.close {
+    padding: 10px 20px;
+    background: #156836;
+    border: 0;
+    color: #fff;
+}
