--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@
 h2.ff {
     font-size: 45px;
     font-weight: 700;
-    margin-bottom: 20px;
+    margin-bottom: 0px;
     text-transform: capitalize;
 }
 
@@ -146,11 +146,11 @@ h4.ff {
 }
 
 .about-us {
-    padding: 100px 0
+    padding: 80px 0
 }
 
 .skill {
-    padding: 10px;
+    padding: 10px 0px;
     max-width: 80%;
 }
 
@@ -214,6 +214,8 @@ h4.ff {
     text-align: center;
     transition: 0.3s;
     border-radius: 0;
+    height: 100%;
+
 }
 
 .counter-box:hover {
@@ -255,7 +257,7 @@ h4.ff {
 }
 
 .faqs {
-    padding: 100px 0
+    padding: 80px 0
 }
 
 .faqs p.text-center {
@@ -307,7 +309,7 @@ h4.ff {
 }
 
 .why-choose-us .col-6-pointers {
-    padding: 100px 15px
+    padding: 80px 15px
 }
 
 .benefits-section {
@@ -350,7 +352,7 @@ h4.ff {
 }
 
 .bookform {
-    padding: 50px 30px;
+    padding: 58px 30px;
     background: #fff;
     border-radius: 16px
 }
@@ -404,7 +406,7 @@ h4.ff {
 
 
 .testimonial_section {
-    padding: 100px 0
+    padding: 80px 0
 }
 
 .testimonial-slider {
@@ -448,6 +450,14 @@ button.close {
     .book-image {
         width: 100%;
     }
+    .skill {
+        max-width: 100%;
+    }
+    h2.ff {
+        font-size: 30px;}
+        .test_image {
+            width: 100%;
+        }
 }
 @media(max-width:575.98px){
     .logo {
@@ -460,5 +470,8 @@ button.close {
        
         width: 47.6px;
         height: 47.6px;
+    }
+    .skill {
+        max-width: 100%;
     }
 }
