--- a/css/style.css
+++ b/css/style.css
@@ -26,11 +26,22 @@
     align-items: center;
 }
 
-.banner {
+/* .banner {
     padding: 12% 0;
     background: url(../images/banner.webp);
     background-position: center;
     background-repeat: no-repeat;
+} */
+.carousel-caption {
+    position: absolute;
+    right: unset;
+    bottom: unset;
+    left: 6.9% !important;
+    top: 6.25rem !important;
+    padding-top: 1.25rem;
+    padding-bottom: 1.25rem;
+    color: #fff;
+    text-align: left !important;
 }
 
 .theme-btn i {
@@ -311,7 +322,7 @@ h4.ff {
 }
 
 .why-choose-us .col-6-pointers {
-    padding: 80px 15px;   
+    padding: 80px 15px;
     padding-left: 5.75%;
 }
 
@@ -345,7 +356,7 @@ h4.ff {
 }
 
 .bookform {
-    padding: 30px 30px;
+    padding: 58px 30px;
     background: #fff;
     border-radius: 16px
 }
@@ -402,6 +413,13 @@ h4.ff {
     padding: 80px 0
 }
 
+.review-img {
+    background: #fff;
+    padding: 5px;
+    box-shadow: 0px 0px 10px rgb(0 0 0 / 10%);
+    border-radius: 0.5rem;
+}
+
 .testimonial-slider {
     padding: 50px 0;
     background: #156836;
@@ -432,19 +450,39 @@ button.close {
     color: #fff;
 }
 
+@media (min-width:1024px) and (max-width:1199.09px) {
+    .carousel-caption {
+        left: 5.9% !important;
+        top: 4.25rem !important;
+    }
+}
+
 @media(min-width:768px) {
     .logo {
         width: 15%;
     }
 }
-@media(max-width:1340.98px){
+
+@media(max-width:1340.98px) {
     .why-choose-us .col-6-pointers {
-        
+
         padding-left: 15px;
     }
 
 }
 
+@media(max-width:991.98px) {
+    h2.ff {
+        font-size: 33px;
+
+    }
+
+    .carousel-caption {
+        left: 10% !important;
+        top: 2.25rem !important;
+
+    }
+}
 
 @media(max-width:767.98px) {
     .logo {
@@ -466,6 +504,15 @@ button.close {
     .test_image {
         width: 100%;
     }
+}
+
+@media(min-width:425px) and (max-width:575.98px) {
+
+    .carousel-caption {
+        left: 2.5% !important;
+        top: 0.7rem !important;
+    }
+
 }
 
 @media(max-width:575.98px) {
@@ -491,11 +538,31 @@ button.close {
         font-weight: 700;
         font-size: 17px;
     }
+
     .xs-width .row .col-sm-6 {
         flex: 0 0 auto;
         width: 50%;
     }
+
     .counter {
         font-size: 27px;
     }
+
+    .carousel-caption {
+        left: 2.5% !important;
+        top: 1.25rem !important;
+    }
+
+}
+
+@media(max-width:424.98px) {
+    .carousel-caption {
+        left: 2.5% !important;
+        top: 0rem !important;
+    }
+
+    .banner-content h2.ff {
+        font-size: 21px;
+    }
+
 }
